# Tip_Planner_from_scratch

./: .env_example  README.md  main.py  pyproject.toml  tasks.py
tools/: calculator_tools.py  search_tools.py
